courses are ready

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
